1999-05-19  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/util/zip/ZipInputStream/reference.zip: New file.
	* gnu/testlet/java/util/zip/ZipInputStream/basic.java: New file.

	* gnu/testlet/java/util/zip/basic.java: New file.
	* gnu/testlet/java/util/zip/reference.data: Likewise.
	* gnu/testlet/java/util/zip/reference.gz: Likewise.

1999-05-18  Warren Levy  <warrenl@cygnus.com>

	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTest2.java
	  (invalid_port): Catch NullPointerException.
	  (invalid_receive_data): Print stack trace after failure msg.
	* gnu/testlet/java/net/MulticastSocket/MulticastClient.java:
	  New file.
	* gnu/testlet/java/net/MulticastSocket/MulticastServer.java:
	  New file.
	* gnu/testlet/java/net/MulticastSocket/MulticastSocketTest.java:
	  New file.

1999-05-12  Warren Levy  <warrenl@cygnus.com>

	* gnu/testlet/java/net/DatagramPacket/DatagramPacketTest.java:
	  New file.
	* gnu/testlet/java/net/DatagramPacket/DatagramPacketTest2.java:
	  New file.
	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTest.java:
	  New file.
	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTest2.java:
	  New file.
	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTestEchoServer.java:
	  New file.
	* gnu/testlet/java/net/DatagramSocket/DatagramSocketTestEchoTimeoutServer.java:
	  New file.

1999-05-07  Tom Tromey  <tromey@cygnus.com>

	* Makefile.in: Rebuilt.
	* Makefile.am (%.o): Depend on classes.stamp.

	* configure: Rebuilt.
	* configure.in: Fixed help output for --with-tmpdir.

1999-04-30  Tom Tromey  <tromey@cygnus.com>

	* gnu/testlet/java/text/RuleBasedCollator/VeryBasic.java (test):
	Use debug, not println.

1999-04-29  Warren Levy  <warrenl@cygnus.com>

	* gnu/testlet/java/net/InetAddress/InetAddressTest.java: New file.
	* gnu/testlet/java/net/ServerSocket/BasicBacklogSocketServer.java:
	  New file.
	* gnu/testlet/java/net/ServerSocket/BasicSocketServer.java: New file.